infra/k8s/fastapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: data-loader
spec:
  ports:
    - port: 8000
      targetPort: 8000
  selector:
    app: data-loader
  type: ClusterIP
